# securedrop

./: Makefile  changelog.md
.circleci/: config.yml
.github/workflows/: build.yml  cargo-vet.yml  ci.yml  security.yml  staging.yml
admin/: requirements-testinfra.in  requirements-testinfra.txt
admin/securedrop_admin/: __init__.py
admin/tests/: test_integration.py  test_securedrop-admin.py
builder/: Dockerfile  build-debs-securedrop.sh
builder/tests/: test_securedrop_deb_package.py
molecule/testinfra/: conftest.py
molecule/testinfra/app/: test_apparmor.py
molecule/testinfra/common/: test_automatic_updates.py  test_grsecurity.py  test_release_upgrades.py  test_system_hardening.py
molecule/testinfra/vars/: app-prod.yml  app-staging.yml  prod.yml  prodVM.yml  qubes-staging.yml  staging.yml
noble-migration/: Cargo.toml
redwood/: Cargo.toml
redwood/src/: lib.rs
securedrop/: i18n.json  i18n.rst  server_os.py  setup.py  version.py
securedrop/debian/: changelog  control  rules  securedrop-app-code.postinst  securedrop-config.install  securedrop-config.postinst
securedrop/journalist_app/: __init__.py  admin.py
securedrop/journalist_templates/: base.html
securedrop/pretty_bad_protocol/: _meta.py
securedrop/requirements/python3/: develop-requirements.in  develop-requirements.txt
securedrop/sass/: source.sass
securedrop/tests/: test_integration.py  test_journalist.py
securedrop/tests/functional/: app_navigators.py  conftest.py  (+2 more)
securedrop/translations/: messages.pot
supply-chain/: audits.toml  config.toml
utils/: backport.py
(+43 files in other folders)
