[package]
name = "redwood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redwood"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
sequoia-openpgp = { version = "1.21.1", default-features = false, features = ["crypto-openssl", "compression"]}
thiserror = "1.0.31"

[dev-dependencies]
tempfile = "3.3.0"

[lints.rust]
# can be removed once we upgrade to pyo3 >= 0.23
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(addr_of)'] }
